--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,18 +18,27 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
-          pip install mkdocs mkdocs-material
+          pip install mkdocs==1.6.0 mkdocs-material==9.2.6
 
       - name: Build MkDocs site
         run: |
-          mkdocs build
+          # If your docs are in a custom folder like 'docs/', specify it:
+          mkdocs build --site-dir site
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-      - name: Upload artifact
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./site
@@ -45,9 +54,16 @@ jobs:
 
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+
+      - name: Show deployed URL
+        run: |
+          if [[ -n "${{ github.repository_owner }}" && -n "${{ github.repository }}" ]]; then
+            echo "Your site is deployed at: https://${{ github.repository_owner }}.github.io/${{ github.repository }}/"
+          else
+            echo "Unable to detect repository info for GitHub Pages URL."
+          fi
