--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: DE Project Blog
+site_name: DataCraft Services -Documentation
 site_description: Documentation for the DE Project
 site_url: https://ani-kmr.github.io/site/
 
